@@ -1,3 +1,7 @@
+2006-09-02 Yen-Ju Chen <yjchenx at gmail>
+
+	* client_list_menu: Fix typo.
+
 2006-08-31 Yen-Ju Chen <yjchenx at gmail>
 
 	* render: Update to 3.3-release.
